# interview_project_online_bourse

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  dh2048.pem  server.key  server_certificate.crt  server_certificate.srl  user.crt  user.csr  user.key
src/: main_client.cpp  main_server.cpp
src/bourse/: database_manager.cpp  database_manager.h  request.cpp  request.h  response.cpp  response.h
src/gui/: authwindow.cpp  authwindow.h  inputwindow.cpp  inputwindow.h  mainwindow.cpp  mainwindow.h
src/network/: client.cpp  client.h  server.cpp  server.h
src/utils/: auxiliary.cpp  auxiliary.h  logger.cpp  logger.h
test/: tests.cpp
ui_forms/: authwindow.ui  inputwindow.ui  mainwindow.ui
